remove old data

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Entekhab Lottery",
-  "name": "Entekhab lottery app",
+  "short_name": "Lottery",
+  "name": "lottery app",
   "icons": [
     {
       "src": "favicon.ico",
